# Start-Hack-2025-UN

./: .gitignore  CLAUDE.md  README.md  setup.md
backend/: backend-new.py  main.py  processing.py  pyproject.toml  requirements.txt  timeline_display.html
backend/graphs/CreateGIF/utils/: generate_response.py  models.py  state.py  tools.py
backend/graphs/GeoChatAgent/: README.md  agent.py
backend/graphs/GeoChatAgent/utils/: models.py  nodes.py  state.py  tools.py
backend/graphs/GeoFiles/: README.md
backend/graphs/GeoFiles/utils/: models.py  tools.py
backend/services/: lookup.py
builderz/: .cursorrules  Precipitation_Niger_2015.tif  backend-new.py  pyproject.toml
builderz/backend/: main.py  requirements.txt  run.py
builderz/backend/graphs/CreateGIF/: README.md  agent.py
builderz/backend/graphs/CreateGIF/utils/: create_visualization.py  nodes.py  (+1 more)
builderz/backend/graphs/GeoFiles/: agent.py
builderz/backend/routers/: graphs.py
builderz/frontend/: next.config.ts  package.json
builderz/frontend/app/: globals.css  layout.tsx  page.tsx
builderz/frontend/components/: Chat.tsx  ChatMessage.tsx
data/: README.md
frontend/: .eslintrc.json  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/report/: page.tsx
frontend/components/: DataControls.tsx  Map.tsx  MapLegend.tsx  QueryInput.tsx  YearSlider.tsx
frontend/components/custom/: MapBox.tsx
frontend/components/ui/: stacking-navbar.tsx  v0-ai-chat.tsx
frontend/lib/: MapContext.tsx  api.ts  types.ts  utils.ts
frontend/public/: timeline-viewer.html
(+4 files in other folders)
