[project]
name = "builderz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "langchain-groq>=0.3.0",
    "langgraph>=0.3.18",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pillow>=11.1.0",
    "rasterio>=1.4.3",
    "seaborn>=0.13.2",
    "uvicorn>=0.34.0",
]
